# axum-tutorial

./: Cargo.toml  README.md
src/: error.rs  main.rs  model.rs  types.rs
src/types/: login.rs
src/web/: routes_login.rs  routes_tickets.rs
tests/: quick_dev.rs
