[package]
name = "axum-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
axum = "0.6.18"
axum-macros = "0.3.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
anyhow = "1.0.71"
httpc-test = "0.1.2"
